--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,7 +31,8 @@ test:
   requires:
     - pytorch
   commands:
-    - BACKEND=pytorch python -c "import deepxde; print(deepxde.__version__)"
+    - export BACKEND=pytorch 
+    - python -c "import deepxde; print(deepxde.__version__)"
 
 about:
   home: https://github.com/lululxvi/deepxde
