--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,10 +29,10 @@ requirements:
 
 test:
   requires:
-#     - pytorch
+    - pytorch
   commands:
-#     - export BACKEND=pytorch 
-#     - python -c "import deepxde; print(deepxde.__version__)"
+    - echo '{"backend": "pytorch"}' > ~/.deepxde/config.json
+    - python -c "import deepxde; print(deepxde.__version__)"
 
 about:
   home: https://github.com/lululxvi/deepxde
