--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,7 +31,7 @@ test:
   requires:
     - pytorch
   commands:
-    - echo '{"backend": "pytorch"}' > ~/.deepxde/config.json
+    - sed -i.bak "s/tensorflow.compat.v1/pytorch/g" ~/.deepxde/config.json
     - python -c "import deepxde; print(deepxde.__version__)"
 
 about:
