--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,9 +29,12 @@ requirements:
 
 test:
   requires:
-    - pytorch
     - tensorflow ==2.7.1
     - tensorflow-probability ==0.15.0
+    - pytorch
+    - jax
+    - flax
+    - optax
   files:
     - test.py
   commands:
